# mit-deeplearning

./: MIT-DL-Mod1.ipynb  README.md
capstone/eval_server/: Cargo.toml  tiny_mlp_evaluator.onnx
capstone/eval_server/src/: main.rs
codemy-pytorch/: intro.ipynb
module_1/: Deep_Learning_Mastering_Neural_Networks_Module_2_Basics_of_Python_for_Machine_Learning.ipynb
module_2/: Deep_Learning_Mastering_Neural_Networks_Module_2_Basics_of_Python_for_Machine_Learning.ipynb  MIT-DL-Mod_2_Assignment.ipynb
module_3/: Deep_Learning_Mastering_Neural_Networks_Module_3_Assignment.ipynb  Deep_Learning_Mastering_Neural_Networks_Module_3_Introduction_to_Deep_Learning_with_PyTorch.ipynb  Deep_Learning_Mastering_Neural_Networks_Module_3_Introduction_to_PyTorch.ipynb  MIT-DL-Mod_2_Assignment.ipynb  deep_learning_mastering_neural_networks_module_3_introduction_to_deep_learning_with_pytorch.ipynb
module_4/: Deep_Learning_Mastering_Neural_Networks_Module_4_Assignment.ipynb  Deep_Learning_Mastering_Neural_Networks_Module_4_Autoencoders_in_Pytorch.ipynb  Deep_Learning_Mastering_Neural_Networks_Module_4_Convolutional_Neural_Networks_in_Pytorch.ipynb
module_5/: Deep_Learning_Mastering_Neural_Networks_Module_5_Assignment.ipynb  Deep_Learning_Mastering_Neural_Networks_Module_5_Introduction_to_RNNs_and_NLP_in_PyTorch.ipynb
module_6/: Deep_Learning_Mastering_Neural_Networks_Module_6_Assignment_.ipynb
