[package]
name = "eval_server"
version = "0.1.0"
edition = "2021"

[dependencies]
axum = "0.7"
tokio = { version = "1", features = ["rt-multi-thread", "macros"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
anyhow = "1"
ndarray = "0.15"
ort = { version = "1.16", features = ["download-binaries"] }  # or latest stable